--- a/node11.html
+++ b/node11.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1034"
+<A NAME="tex2html1033"
   HREF="node12.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1028"
+<A NAME="tex2html1027"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1022"
+<A NAME="tex2html1021"
   HREF="node10.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1030"
+<A NAME="tex2html1029"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1032"
+<A NAME="tex2html1031"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1035"
+<B> Sig:</B> <A NAME="tex2html1034"
   HREF="node12.html">Comentarios y Consejos</A>
-<B>Sup:</B> <A NAME="tex2html1029"
+<B>Sup:</B> <A NAME="tex2html1028"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1023"
+<B> Ant:</B> <A NAME="tex2html1022"
   HREF="node10.html">Práctica: Conversor de Temperaturas</A>
 <B> Con:</B> 
-<A NAME="tex2html1030"
+<A NAME="tex2html1029"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1032"
+<A NAME="tex2html1031"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,41 +103,41 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1036"
+<LI><A NAME="tex2html1035"
   HREF="node11.html#SECTION04140010000000000000">Donde</A>
-<LI><A NAME="tex2html1037"
+<LI><A NAME="tex2html1036"
   HREF="node11.html#SECTION04140020000000000000">Introducción al formato CSV</A>
-<LI><A NAME="tex2html1038"
+<LI><A NAME="tex2html1037"
   HREF="node11.html#SECTION04140030000000000000">Ejemplo de ejecución</A>
-<LI><A NAME="tex2html1039"
+<LI><A NAME="tex2html1038"
   HREF="node11.html#SECTION04140040000000000000">Aproximación al análisis mediante expresiones regulares de CSV</A>
-<LI><A NAME="tex2html1040"
+<LI><A NAME="tex2html1039"
   HREF="node11.html#SECTION04140050000000000000">index.html</A>
-<LI><A NAME="tex2html1041"
+<LI><A NAME="tex2html1040"
   HREF="node11.html#SECTION04140060000000000000">jQuery</A>
-<LI><A NAME="tex2html1042"
+<LI><A NAME="tex2html1041"
   HREF="node11.html#SECTION04140070000000000000">How JQuery Works</A>
-<LI><A NAME="tex2html1043"
+<LI><A NAME="tex2html1042"
   HREF="node11.html#SECTION04140080000000000000">Ajax, jQuery y Express.js</A>
-<LI><A NAME="tex2html1044"
+<LI><A NAME="tex2html1043"
   HREF="node11.html#SECTION04140090000000000000">Ajax, jQuery y Sinatra</A>
-<LI><A NAME="tex2html1045"
+<LI><A NAME="tex2html1044"
   HREF="node11.html#SECTION041400100000000000000">JSON.stringify()</A>
-<LI><A NAME="tex2html1046"
+<LI><A NAME="tex2html1045"
   HREF="node11.html#SECTION041400110000000000000">Underscore</A>
-<LI><A NAME="tex2html1047"
+<LI><A NAME="tex2html1046"
   HREF="node11.html#SECTION041400120000000000000">Templates en Underscore</A>
-<LI><A NAME="tex2html1048"
+<LI><A NAME="tex2html1047"
   HREF="node11.html#SECTION041400130000000000000">Content delivery network or content distribution network (CDN)</A>
-<LI><A NAME="tex2html1049"
+<LI><A NAME="tex2html1048"
   HREF="node11.html#SECTION041400140000000000000">textarea, autofocus y button</A>
-<LI><A NAME="tex2html1050"
+<LI><A NAME="tex2html1049"
   HREF="node11.html#SECTION041400150000000000000">Local Storage (HTML5 Web Storage)</A>
-<LI><A NAME="tex2html1051"
+<LI><A NAME="tex2html1050"
   HREF="node11.html#SECTION041400160000000000000">global.css</A>
-<LI><A NAME="tex2html1052"
+<LI><A NAME="tex2html1051"
   HREF="node11.html#SECTION041400170000000000000">csv.js</A>
-<LI><A NAME="tex2html1053"
+<LI><A NAME="tex2html1052"
   HREF="node11.html#SECTION041400180000000000000">Tareas</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
@@ -988,70 +988,57 @@ To defer executing <code>myCallBack()</code> with its parameters, you can use
 an anonymous function as a wrapper.
 
 <P>
+En el directorio <code>views</code> hemos puesto el template:
 <PRE>
-[~/javascript/jquery(master)]$ cat app2.rb
-require 'sinatra'
-
-set :public_folder, File.dirname(__FILE__) + '/starterkit'
-
-get '/' do
-  erb :index
-end
-
-get '/chuchu' do
-  if request.xhr? # is an ajax request
-    "hello world!"
-  else 
-    erb :tutu
-  end
-end
-
-__END__
-
-@@layout
-  &lt;!DOCTYPE html&gt;
-  &lt;html&gt;
-    &lt;head&gt;
-        &lt;meta charset="utf-8" /&gt;
-        &lt;title&gt;Demo&lt;/title&gt;
-    &lt;/head&gt;
-    &lt;body&gt;
-        &lt;a href="http://jquery.com/"&gt;jQuery&lt;/a&gt;
-        &lt;div class="result"&gt;&lt;/div&gt;
-        &lt;script src="jquery.js"&gt;&lt;/script&gt;
-        &lt;%= yield %&gt;
-    &lt;/body&gt;
-  &lt;/html&gt;
-
-@@tutu
-  &lt;h1&gt;Not an Ajax Request!&lt;/h1&gt;
-
-@@index
-  &lt;script&gt;
-    var param = "chuchu param";
-    var handler = function( data, textStatus, jqXHR, param ) {
-      $( ".result" ).html( data );
-      alert( "Load was performed.\n"+
-             "$data = "+data+
-             "\ntextStatus = "+textStatus+
-             "\njqXHR = "+JSON.stringify(jqXHR)+
-             "\nparam = "+param );
-    };
-    $( document ).ready(function() {
-        $( "a" ).click(function( event ) {
-            event.preventDefault();
-            $.get( "/chuchu", function(data, textStatus, jqXHR ) {
-              handler( data, textStatus, jqXHR, param);
-            });
-        });
-    });
-  &lt;/script&gt;
+[~/javascript/jquery/how-jquery-works-tutorial(getallparams)]$ cat views/index.ejs 
+&lt;!doctype html&gt;
+&lt;html&gt;
+  &lt;head&gt;
+    &lt;title&gt;&lt;%- title %&gt;&lt;/title&gt;
+  &lt;/head&gt;
+  &lt;body&gt;
+    &lt;h1&gt;&lt;%- title  %&gt;&lt;/h1&gt;
+    &lt;ul&gt;
+      &lt;li&gt;&lt;a href="http://jquery.com/" id="jq"&gt;jQuery&lt;/a&gt;
+      &lt;li&gt;&lt;a href="/chuchu"&gt;Visit chuchu!&lt;/a&gt;
+    &lt;/ul&gt;
+    &lt;div class="result"&gt;&lt;/div&gt;
+    &lt;script src="https://code.jquery.com/jquery-2.1.3.js"&gt;&lt;/script&gt;
+    &lt;script&gt;
+      $( document ).ready(function() {
+          $( "#jq" ).click(function( event ) {
+              event.preventDefault();
+              $.get( "/chuchu", {nombres: ["juan", "pedro"]}, function( data ) {
+                $( ".result" ).html( data["answer"]);
+                console.log(data);
+                //alert( "Load was performed. Answer = "+data["answer"]);
+              }, 'json');
+          });
+      });
+    &lt;/script&gt;
+  &lt;/body&gt;
+&lt;/html&gt;
 </PRE>
-El ejemplo en <code>app2.rb</code> puede verse desplegado en Heroku:
-<A NAME="tex2html94"
-  HREF="http://jquery-tutorial.herokuapp.com/">http://jquery-tutorial.herokuapp.com/</A>
-<P>
+Podemos arrancar el servidor usando este <code>gulpfile</code>:
 
+<P>
+<PRE>
+[~/javascript/jquery/how-jquery-works-tutorial(getallparams)]$ cat gulpfile.js 
+var gulp    = require('gulp');
+var shell = require('gulp-shell');
+
+gulp.task('default', ['server']);
+
+// npm install supervisor -g
+gulp.task('server', function () {
+  return gulp.src('').pipe(shell([ 'node-supervisor app.js' ]));
+});
+
+gulp.task('open', function() {
+  return gulp.src('').
+           pipe(shell("open https://github.com/crguezl/how-jquery-works-tutorial/tree/getallparams"));
+});
+</PRE>
 <H4><A NAME="SECTION04140090000000000000">
 Ajax, jQuery y Sinatra</A>
 </H4>
@@ -1263,7 +1250,7 @@ __END__
   &lt;/script&gt;
 </PRE>
 El ejemplo en <code>app2.rb</code> puede verse desplegado en Heroku:
-<A NAME="tex2html95"
+<A NAME="tex2html94"
   HREF="http://jquery-tutorial.herokuapp.com/">http://jquery-tutorial.herokuapp.com/</A>
 <P>
 
@@ -1275,7 +1262,7 @@ JSON.stringify()</A>
   
 
 <A NAME="parrafo:jsonstringify"></A>The
-<A NAME="tex2html96"
+<A NAME="tex2html95"
   HREF="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify">JSON.stringify() </A>
 method converts a value to  <TT>JSON</TT> , optionally replacing values
 if a <code>replacer function</code> is specified, or optionally including only the
@@ -1313,10 +1300,10 @@ Causes the resulting string to be pretty-printed.
 
 <P>
 See another example of use in
-<A NAME="tex2html97"
+<A NAME="tex2html96"
   HREF="http://jsfiddle.net/casiano/j7tsF/">http://jsfiddle.net/casiano/j7tsF/</A>.
 To learn to use JSFiddle wath the YouTube video 
-<A NAME="tex2html98"
+<A NAME="tex2html97"
   HREF="http://youtu.be/Iw4f-yRf7RU">How to use JSFiddle by Jason Diamond</A>
 <P>
 
@@ -1328,7 +1315,7 @@ Underscore</A>
   
 
 <P>
-<A NAME="tex2html99"
+<A NAME="tex2html98"
   HREF="http://underscorejs.org/">Underscore</A>:
 is a utility-belt library for JavaScript that provides a
 lot of the functional programming support that you would expect in
@@ -1496,7 +1483,7 @@ Templates en Underscore</A>
 <P>
 
 <UL>
-<LI><A NAME="tex2html100"
+<LI><A NAME="tex2html99"
   HREF="http://underscorejs.org/#template">Underscore: template</A>
 <P>
 <code>_.template(templateString, [data], [settings])</code>
@@ -1725,10 +1712,10 @@ _.template("Using 'with': &lt;%= data.answer %&gt;", {answer: 'no'}, {variable: 
 
 <P>
 </LI>
-<LI><A NAME="tex2html101"
+<LI><A NAME="tex2html100"
   HREF="http://jsfiddle.net/casiano/LS384/">JSFIDDLE: underscore templates</A>
 </LI>
-<LI><A NAME="tex2html102"
+<LI><A NAME="tex2html101"
   HREF="http://stackoverflow.com/questions/4778881/how-to-use-underscore-js-as-a-template-engine">Stackoverflow::how to use Underscore template</A>
 <P>
 </LI>
@@ -1745,7 +1732,7 @@ Content delivery network or content distribution network (CDN)</A>
 
 <P>
 Una CDN que provee <code>underscore</code> esta en 
-<A NAME="tex2html103"
+<A NAME="tex2html102"
   HREF="http://cdnjs.com/">http://cdnjs.com/</A>:
 <PRE>
 &lt;script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"&gt;&lt;/script&gt;
@@ -1771,7 +1758,7 @@ streaming media, and social networks.
 
 <P>
 Google provee también un servicio CDN para los desarrolladores en
-<A NAME="tex2html104"
+<A NAME="tex2html103"
   HREF="https://developers.google.com/speed/libraries/devguide">https://developers.google.com/speed/libraries/devguide</A>.
 
 <P>
@@ -1782,7 +1769,7 @@ textarea, autofocus y button</A>
   
 
 <OL>
-<LI><A NAME="tex2html105"
+<LI><A NAME="tex2html104"
   HREF="http://www.w3schools.com/tags/tag_textarea.asp">textarea</A>:
 
 <P>
@@ -1802,7 +1789,7 @@ attributes, or through CSS' <code>height</code> and <code>width</code> propertie
 
 <P>
 </LI>
-<LI><A NAME="tex2html106"
+<LI><A NAME="tex2html105"
   HREF="http://www.w3api.com/wiki/HTML5:INPUT.autofocus">autofocus</A>.
 
 <P>
@@ -1817,7 +1804,7 @@ Véase también [<A
 
 <P>
 </LI>
-<LI><A NAME="tex2html107"
+<LI><A NAME="tex2html106"
   HREF="http://www.w3schools.com/tags/tag_button.asp">button</A>:
 
 <P>
@@ -1864,7 +1851,7 @@ cookies respectively.
 </LI>
 <LI>Unlike cookies, which can be accessed by both the server and client side, web storage falls exclusively under the purview of client-side scripting
 </LI>
-<LI>The HTML5 localStorage object is isolated per domain (the same segregation rules as the <A NAME="tex2html108"
+<LI>The HTML5 localStorage object is isolated per domain (the same segregation rules as the <A NAME="tex2html107"
   HREF="http://en.wikipedia.org/wiki/Same_origin_policy">same origin policy</A>).
 Under this policy, 
 <FONT COLOR="#0000ff"> a web browser permits scripts contained in a first web page to access data in a second web page, but only if both web pages have the same origin</FONT>. 
@@ -1885,29 +1872,29 @@ Véase:
 
 <UL>
 <LI>Ejemplo en  GitHub:
-<A NAME="tex2html109"
+<A NAME="tex2html108"
   HREF="https://github.com/crguezl/web-storage-example">https://github.com/crguezl/web-storage-example</A>
 <PRE>
 [~/javascript/local_storage(master)]$ pwd -P
 /Users/casiano/local/src/javascript/local_storage
 </PRE>
 </LI>
-<LI><A NAME="tex2html110"
+<LI><A NAME="tex2html109"
   HREF="http://html5facil.com/tutoriales/como-usar-local-storage-de-javascript">Como usar localstorage</A>
 <P>
 </LI>
-<LI><A NAME="tex2html111"
+<LI><A NAME="tex2html110"
   HREF="http://www.w3schools.com/html/html5_webstorage.asp">HTML5 Web Storage</A>
 </LI>
-<LI><A NAME="tex2html112"
+<LI><A NAME="tex2html111"
   HREF="http://www.w3.org/TR/webstorage/">W3C Web Storage</A>
 </LI>
-<LI><A NAME="tex2html113"
+<LI><A NAME="tex2html112"
   HREF="http://getfishtank.ca/blog/using-html5-localstorage-to-store-json">Using HTML5 localStorage To Store JSON</A>
 Options for persistent storage of complex JavaScript objects in HTML5
 by Dan Cruickshank
 </LI>
-<LI><A NAME="tex2html114"
+<LI><A NAME="tex2html113"
   HREF="http://books.google.es/books/about/HTML5_Cookbook.html?id=cXcaY7XVZbcC&amp;redir_esc=y">HTML5 Cookbook.  Christopher Schmitt, Kyle Simpson "O'Reilly Media, Inc.", Nov 7, 2011</A>
 Chapter 10. Section 2: LocalStorage
 </LI>
@@ -1970,7 +1957,7 @@ body
 <P>
 
 <OL>
-<LI><A NAME="tex2html115"
+<LI><A NAME="tex2html114"
   HREF="http://www.genbetadev.com/desarrollo-web/introduccion-a-las-pseudo-clases-de-css3">Introducción a las pseudo clases de CSS3</A>
 <P>
 Una pseudo clase es un estado o uso predefinido de un elemento al
@@ -1996,7 +1983,7 @@ basándonos en el lenguaje o que tipo de etiqueta no son
 
 <P>
 </LI>
-<LI><A NAME="tex2html116"
+<LI><A NAME="tex2html115"
   HREF="http://www.w3.org/TR/CSS2/selector.html#pattern-matching">CSS pattern matching</A>
 <P>
 In CSS, <A NAME="3967"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
@@ -2020,7 +2007,7 @@ this rule set will be applied to every element in a document:
 }
 </PRE>
 </LI>
-<LI><A NAME="tex2html117"
+<LI><A NAME="tex2html116"
   HREF="http://www.w3.org/TR/CSS2/selector.html#class-html">CSS class selectors</A>
 <P>
 Working with HTML, authors may use the period (<code>.</code>) notation
@@ -2030,7 +2017,7 @@ meaning. The attribute value must immediately follow the <I>period</I> (<code>.<
 
 <P>
 </LI>
-<LI><A NAME="tex2html118"
+<LI><A NAME="tex2html117"
   HREF="http://www.w3schools.com/cssref/sel_nth-child.asp">CSS3: nth-child() selector</A>
 The <code>:nth-child(n)</code> selector matches every element that is the <code>n</code>th 
 child, regardless of type, of its parent.
@@ -2049,7 +2036,7 @@ The effect depends on the border-color value
 
 <P>
 See 
-<A NAME="tex2html119"
+<A NAME="tex2html118"
   HREF="http://www.tizag.com/cssT/border.php">CSS: border</A>
 <P>
 </LI>
@@ -2136,7 +2123,7 @@ csv.js</A>
 <P>
 
 <OL>
-<LI><A NAME="tex2html120"
+<LI><A NAME="tex2html119"
   HREF="http://docs.jquery.com/Tutorials:Getting_Started_with_jQuery">Tutorials:Getting Started with jQuery</A>
 </LI>
 </OL>
@@ -2162,19 +2149,19 @@ Tareas</A>
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1034"
+<A NAME="tex2html1033"
   HREF="node12.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1028"
+<A NAME="tex2html1027"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1022"
+<A NAME="tex2html1021"
   HREF="node10.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1030"
+<A NAME="tex2html1029"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1032"
+<A NAME="tex2html1031"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -2214,11 +2201,11 @@ Tareas</A>
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1035"
+<B> Sig:</B> <A NAME="tex2html1034"
   HREF="node12.html">Comentarios y Consejos</A>
-<B>Sup:</B> <A NAME="tex2html1029"
+<B>Sup:</B> <A NAME="tex2html1028"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1023"
+<B> Ant:</B> <A NAME="tex2html1022"
   HREF="node10.html">Práctica: Conversor de Temperaturas</A>
 </DIV>
 <!--End of Navigation Panel-->
