--- a/node11.html
+++ b/node11.html
@@ -611,7 +611,7 @@ jQuery</A>
   HREF="http://jquery.com/download/">Descarga la librería</A>)
 
 <P>
-<A NAME="3142"></A><SPAN  CLASS="textbf">jQuery</SPAN> is a cross-platform JavaScript library designed to simplify
+<A NAME="3139"></A><SPAN  CLASS="textbf">jQuery</SPAN> is a cross-platform JavaScript library designed to simplify
 the client-side scripting of HTML. 
 
 <P>
@@ -848,24 +848,6 @@ Ajax, jQuery y Express.js</A>
   
 
 <P>
-JavaScript enables you to freely
-pass functions around to be executed at a later time. 
-
-<P>
-A <A NAME="3156"></A><SPAN  CLASS="textbf">callback</SPAN> is a
-function that is passed as an argument to another function and is usually 
-executed
-after its parent function has completed. 
-
-<P>
-Callbacks are special because
-they wait to execute until their parent finishes or some event occurs. 
-
-<P>
-Meanwhile, the
-browser can be executing other functions or doing all sorts of other work.
-
-<P>
 <A NAME="tex2html93"
   HREF="https://github.com/crguezl/how-jquery-works-tutorial/tree/getallparams">Código del server</A>:
 
@@ -955,39 +937,6 @@ The type of data expected from the server. Default: Intelligent Guess
 To use callbacks, it is important to know how to pass them into their parent function.
 
 <P>
-Executing callbacks with arguments can be tricky.
-
-<P>
-This code example will not work:
-
-<P>
-<PRE>
-$.get( "myhtmlpage.html", myCallBack( param1, param2 ) );
-</PRE>
-The reason this fails is that the code executes 
-
-<P>
-<PRE>
-myCallBack( param1, param2)
-</PRE>
-
-<P>
-immediately and then passes <code>myCallBack()</code>'s return value as the second
-parameter to <code>$.get()</code>. 
-
-<P>
-We actually want to pass the function <code>myCallBack</code>,
-not <code>myCallBack( param1, param2 )</code>'s return value (which might or might not
-be a function). 
-
-<P>
-So, how to pass in <code>myCallBack()</code> and include arguments?
-
-<P>
-To defer executing <code>myCallBack()</code> with its parameters, you can use
-an anonymous function as a wrapper.
-
-<P>
 En el directorio <code>views</code> hemos puesto el template:
 <PRE>
 [~/javascript/jquery/how-jquery-works-tutorial(getallparams)]$ cat views/index.ejs 
@@ -1017,6 +966,28 @@ En el directorio <code>views</code> hemos puesto el template:
     &lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;
+</PRE>
+Estas son las dependencias:
+<PRE>
+[~/javascript/jquery/how-jquery-works-tutorial(getallparams)]$ cat package.json 
+{
+  "name": "ajaxjquery",
+  "version": "0.0.0",
+  "description": "",
+  "main": "hello.js",
+  "dependencies": {
+    "express": "*",
+    "ejs": "*",
+    "gulp-shell": "*",
+    "body-parser": "~1.12.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "node hello.js"
+  },
+  "author": "",
+  "license": "ISC"
+}
 </PRE>
 Podemos arrancar el servidor usando este <code>gulpfile</code>:
 
@@ -1048,7 +1019,7 @@ Ajax, jQuery y Sinatra</A>
 
 <P>
 JavaScript enables you to freely
-pass functions around to be executed at a later time. A <A NAME="3162"></A><SPAN  CLASS="textbf">callback</SPAN> is a
+pass functions around to be executed at a later time. A <A NAME="3157"></A><SPAN  CLASS="textbf">callback</SPAN> is a
 function that is passed as an argument to another function and is usually 
 executed
 after its parent function has completed. 
@@ -1493,11 +1464,11 @@ Templates en Underscore</A>
 <P>
 Compiles JavaScript templates into functions that can be evaluated for
 rendering. Useful for rendering complicated bits of HTML from a JavaScript 
-object or from <A NAME="3460"></A><SPAN  CLASS="textbf">JSON</SPAN> data
+object or from <A NAME="3431"></A><SPAN  CLASS="textbf">JSON</SPAN> data
 sources.
 
 <P>
-JSON, or <A NAME="3462"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
+JSON, or <A NAME="3433"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
 that uses human-readable text to transmit data objects consisting of
 attribute–value pairs. It is used primarily to transmit data between
 a server and web application, as an alternative to XML.
@@ -1778,7 +1749,7 @@ textarea, autofocus y button</A>
 The <code>&lt;textarea&gt;</code> tag defines a multi-line text input control.
 
 <P>
-A <A NAME="3472"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
+A <A NAME="3443"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
 renders in a fixed-width font (usually Courier).
 
 <P>
@@ -1827,7 +1798,7 @@ Local Storage (HTML5 Web Storage)</A>
   
 
 <P>
-<A NAME="3947"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3949"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
+<A NAME="3918"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3920"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
 (document object model) are web application
 software methods and protocols used for storing data in a web browser. 
 
@@ -1847,8 +1818,8 @@ parecido, pero con el limite de 100kb.
 
 <P>
 </LI>
-<LI>There are two main web storage types: <A NAME="3951"></A><SPAN  CLASS="textbf">local storage</SPAN>
-and <A NAME="3953"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
+<LI>There are two main web storage types: <A NAME="3922"></A><SPAN  CLASS="textbf">local storage</SPAN>
+and <A NAME="3924"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
 cookies respectively.
 </LI>
 <LI>Unlike cookies, which can be accessed by both the server and client side, web storage falls exclusively under the purview of client-side scripting
@@ -1988,7 +1959,7 @@ basándonos en el lenguaje o que tipo de etiqueta no son
 <LI><A NAME="tex2html115"
   HREF="http://www.w3.org/TR/CSS2/selector.html#pattern-matching">CSS pattern matching</A>
 <P>
-In CSS, <A NAME="3969"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
+In CSS, <A NAME="3940"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
 to elements in the document tree. 
 These patterns, called selectors,
 may range from simple element names to rich contextual patterns. If all
