--- a/node11.html
+++ b/node11.html
@@ -989,6 +989,9 @@ Estas son las dependencias:
   "license": "ISC"
 }
 </PRE>
+Además hemos instalado a nivel global <code>gulp</code> y <code>node-supervisor</code>.
+
+<P>
 Podemos arrancar el servidor usando este <code>gulpfile</code>:
 
 <P>
@@ -1464,11 +1467,11 @@ Templates en Underscore</A>
 <P>
 Compiles JavaScript templates into functions that can be evaluated for
 rendering. Useful for rendering complicated bits of HTML from a JavaScript 
-object or from <A NAME="3431"></A><SPAN  CLASS="textbf">JSON</SPAN> data
+object or from <A NAME="3433"></A><SPAN  CLASS="textbf">JSON</SPAN> data
 sources.
 
 <P>
-JSON, or <A NAME="3433"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
+JSON, or <A NAME="3435"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
 that uses human-readable text to transmit data objects consisting of
 attribute–value pairs. It is used primarily to transmit data between
 a server and web application, as an alternative to XML.
@@ -1749,7 +1752,7 @@ textarea, autofocus y button</A>
 The <code>&lt;textarea&gt;</code> tag defines a multi-line text input control.
 
 <P>
-A <A NAME="3443"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
+A <A NAME="3445"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
 renders in a fixed-width font (usually Courier).
 
 <P>
@@ -1798,7 +1801,7 @@ Local Storage (HTML5 Web Storage)</A>
   
 
 <P>
-<A NAME="3918"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3920"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
+<A NAME="3920"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3922"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
 (document object model) are web application
 software methods and protocols used for storing data in a web browser. 
 
@@ -1818,8 +1821,8 @@ parecido, pero con el limite de 100kb.
 
 <P>
 </LI>
-<LI>There are two main web storage types: <A NAME="3922"></A><SPAN  CLASS="textbf">local storage</SPAN>
-and <A NAME="3924"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
+<LI>There are two main web storage types: <A NAME="3924"></A><SPAN  CLASS="textbf">local storage</SPAN>
+and <A NAME="3926"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
 cookies respectively.
 </LI>
 <LI>Unlike cookies, which can be accessed by both the server and client side, web storage falls exclusively under the purview of client-side scripting
@@ -1959,7 +1962,7 @@ basándonos en el lenguaje o que tipo de etiqueta no son
 <LI><A NAME="tex2html115"
   HREF="http://www.w3.org/TR/CSS2/selector.html#pattern-matching">CSS pattern matching</A>
 <P>
-In CSS, <A NAME="3940"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
+In CSS, <A NAME="3942"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
 to elements in the document tree. 
 These patterns, called selectors,
 may range from simple element names to rich contextual patterns. If all
