--- a/node11.html
+++ b/node11.html
@@ -2136,6 +2136,8 @@ Tareas</A>
   
 
 <P>
+Además de todo lo descrito en los apartados anteriores, la práctica debe cumplir con los
+siguientes requisitos:
 
 <UL>
 <LI>Añada pruebas usando Mocha y Chai
@@ -2143,6 +2145,8 @@ Tareas</A>
 <LI>Use Karma para la ejecución de las tareas
 </LI>
 <LI>Use Gulp para la gestión de las tareas 
+</LI>
+<LI>Despliegue la aplicación en Heroku usando Express.JS
 </LI>
 </UL>
 
