--- a/node11.html
+++ b/node11.html
@@ -2140,6 +2140,10 @@ Además de todo lo descrito en los apartados anteriores, la práctica debe cumpl
 siguientes requisitos:
 
 <UL>
+<LI>Los templates deben hacerse usando underscore y el truco del elemento <code>script</code> en el HTML
+</LI>
+<LI>Se debe usar locaStorage para almacenar las últimas entradas
+</LI>
 <LI>Añada pruebas usando Mocha y Chai
 </LI>
 <LI>Use Karma para la ejecución de las tareas
