--- a/node11.html
+++ b/node11.html
@@ -2150,6 +2150,10 @@ siguientes requisitos:
 </LI>
 <LI>Use Gulp para la gestión de las tareas 
 </LI>
+<LI>Haga un análisis de cubrimiento
+</LI>
+<LI>Despliegue las pruebas en Travis
+</LI>
 <LI>Despliegue la aplicación en Heroku usando Express.JS
 </LI>
 </UL>
