--- a/node12.html
+++ b/node12.html
@@ -99,7 +99,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04150000000000000000"></A>
-   <A NAME="3975"></A>
+   <A NAME="3976"></A>
   
 <A NAME="sectionpractica:csvajax"></A>
 <BR>
@@ -108,6 +108,7 @@ Práctica: Comma Separated Values. CSV usando Ajax
 
 <P>
 A los requisitos de la práctica <I>Comma Separated Values. CSV</I> <A HREF="node11.html#sectionpractica:csv">1.4</A>
+anterior:
 
 <UL>
 <LI>Los templates deben hacerse usando underscore y el truco del elemento <code>script</code> en el HTML
@@ -124,7 +125,8 @@ A los requisitos de la práctica <I>Comma Separated Values. CSV</I> <A HREF="nod
 </LI>
 <LI>Despliegue las pruebas en Travis
 </LI>
-<LI>Despliegue la aplicación en Heroku usando Express.JS
+<LI>
+<FONT COLOR="#0000ff"> Despliegue la aplicación en Heroku usando Express.JS</FONT>
 </LI>
 </UL>
 Le añadimos el requisito de usar AJAX con jQuery:
