--- a/node12.html
+++ b/node12.html
@@ -104,11 +104,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><UL>
 <LI><UL>
 <LI><A NAME="tex2html1081"
-  HREF="node12.html#SECTION04150010000000000000">Ajax, jQuery y Express.js</A>
+  HREF="node12.html#SECTION04150010000000000000">Ejemplo usando Ajax con jQuery y Express.js</A>
 <LI><A NAME="tex2html1082"
-  HREF="node12.html#SECTION04150020000000000000">Desplegando Express y Node.JS en Heroku</A>
+  HREF="node12.html#SECTION04150020000000000000">Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
 <LI><A NAME="tex2html1083"
-  HREF="node12.html#SECTION04150030000000000000">Requisitos</A>
+  HREF="node12.html#SECTION04150030000000000000">Requisitos de la Práctica</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -126,7 +126,7 @@ Práctica: Comma Separated Values. CSV usando Ajax
 <P>
 
 <H4><A NAME="SECTION04150010000000000000">
-Ajax, jQuery y Express.js</A>
+Ejemplo usando Ajax con jQuery y Express.js</A>
 </H4>
   
 
@@ -299,7 +299,7 @@ gulp.task('open', function() {
 <P>
 
 <H4><A NAME="SECTION04150020000000000000">
-Desplegando Express y Node.JS en Heroku</A>
+Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
 </H4>
   
 
@@ -321,7 +321,7 @@ Véase:
 <P>
 
 <H4><A NAME="SECTION04150030000000000000">
-Requisitos</A>
+Requisitos de la Práctica</A>
 </H4>
   
 
