--- a/node11.html
+++ b/node11.html
@@ -118,9 +118,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html1054"
   HREF="node11.html#SECTION04140070000000000000">How JQuery Works</A>
 <LI><A NAME="tex2html1055"
-  HREF="node11.html#SECTION04140080000000000000">Ajax, jQuery y Express.js</A>
+  HREF="node11.html#SECTION04140080000000000000">Ejemplo usando Ajax con jQuery y Express.js</A>
 <LI><A NAME="tex2html1056"
-  HREF="node11.html#SECTION04140090000000000000">Desplegando Express y Node.JS en Heroku</A>
+  HREF="node11.html#SECTION04140090000000000000">Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
 <LI><A NAME="tex2html1057"
   HREF="node11.html#SECTION041400100000000000000">Ajax, jQuery y Sinatra</A>
 <LI><A NAME="tex2html1058"
@@ -847,7 +847,7 @@ $( "p" ).removeClass( "myClass noClass" ).addClass( "yourClass" );
 <P>
 
 <H4><A NAME="SECTION04140080000000000000">
-Ajax, jQuery y Express.js</A>
+Ejemplo usando Ajax con jQuery y Express.js</A>
 </H4>
   
 
@@ -1020,7 +1020,7 @@ gulp.task('open', function() {
 <P>
 
 <H4><A NAME="SECTION04140090000000000000">
-Desplegando Express y Node.JS en Heroku</A>
+Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
 </H4>
   
 
