--- a/node7.html
+++ b/node7.html
@@ -212,9 +212,9 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <LI><A NAME="tex2html912"
   HREF="node11.html#SECTION04140070000000000000">How JQuery Works</A>
 <LI><A NAME="tex2html913"
-  HREF="node11.html#SECTION04140080000000000000">Ajax, jQuery y Express.js</A>
+  HREF="node11.html#SECTION04140080000000000000">Ejemplo usando Ajax con jQuery y Express.js</A>
 <LI><A NAME="tex2html914"
-  HREF="node11.html#SECTION04140090000000000000">Desplegando Express y Node.JS en Heroku</A>
+  HREF="node11.html#SECTION04140090000000000000">Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
 <LI><A NAME="tex2html915"
   HREF="node11.html#SECTION041400100000000000000">Ajax, jQuery y Sinatra</A>
 <LI><A NAME="tex2html916"
@@ -241,11 +241,11 @@ Expresiones Regulares y Análisis Léxico en JavaScript
   HREF="node12.html">Práctica: Comma Separated Values. CSV usando Ajax</A>
 <UL>
 <LI><A NAME="tex2html926"
-  HREF="node12.html#SECTION04150010000000000000">Ajax, jQuery y Express.js</A>
+  HREF="node12.html#SECTION04150010000000000000">Ejemplo usando Ajax con jQuery y Express.js</A>
 <LI><A NAME="tex2html927"
-  HREF="node12.html#SECTION04150020000000000000">Desplegando Express y Node.JS en Heroku</A>
+  HREF="node12.html#SECTION04150020000000000000">Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
 <LI><A NAME="tex2html928"
-  HREF="node12.html#SECTION04150030000000000000">Requisitos</A>
+  HREF="node12.html#SECTION04150030000000000000">Requisitos de la Práctica</A>
 </UL>
 <BR>
 <LI><A NAME="tex2html929"
