--- a/node12.html
+++ b/node12.html
@@ -328,7 +328,7 @@ GitHub Issues</A>
   
 
 <A NAME="tex2html125"
-  HREF="https://guides.github.com/overviews/issues/">Mastering Issues</A>
+  HREF="https://guides.github.com/features/issues/index.html">Mastering Issues</A>
 <P>
 
 <H4><A NAME="SECTION04150040000000000000">
@@ -382,7 +382,7 @@ grupo. Aprenda a referenciar commits dentro de un issue, a referenciar colaborad
 <P>
 Para ello vale la pena que lean este tutorial:
 <A NAME="tex2html126"
-  HREF="https://guides.github.com/overviews/issues/">Mastering Issues</A>
+  HREF="https://guides.github.com/features/issues/index.html">Mastering Issues</A>
 </LI>
 </UL>
 
