--- a/node12.html
+++ b/node12.html
@@ -106,7 +106,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html1084"
   HREF="node12.html#SECTION04150010000000000000">Ejemplo usando Ajax con jQuery y Express.js</A>
 <LI><A NAME="tex2html1085"
-  HREF="node12.html#SECTION04150020000000000000">Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
+  HREF="node12.html#SECTION04150020000000000000">Ejemplo de como Desplegar una Aplicación  Express sobre Node.JS en Heroku</A>
 <LI><A NAME="tex2html1086"
   HREF="node12.html#SECTION04150030000000000000">GitHub Issues</A>
 <LI><A NAME="tex2html1087"
@@ -301,7 +301,7 @@ gulp.task('open', function() {
 <P>
 
 <H4><A NAME="SECTION04150020000000000000">
-Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
+Ejemplo de como Desplegar una Aplicación  Express sobre Node.JS en Heroku</A>
 </H4>
   
 
