--- a/node11.html
+++ b/node11.html
@@ -120,7 +120,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html1058"
   HREF="node11.html#SECTION04140080000000000000">Ejemplo usando Ajax con jQuery y Express.js</A>
 <LI><A NAME="tex2html1059"
-  HREF="node11.html#SECTION04140090000000000000">Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
+  HREF="node11.html#SECTION04140090000000000000">Ejemplo de como Desplegar una Aplicación  Express sobre Node.JS en Heroku</A>
 <LI><A NAME="tex2html1060"
   HREF="node11.html#SECTION041400100000000000000">Ajax, jQuery y Sinatra</A>
 <LI><A NAME="tex2html1061"
@@ -1020,7 +1020,7 @@ gulp.task('open', function() {
 <P>
 
 <H4><A NAME="SECTION04140090000000000000">
-Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
+Ejemplo de como Desplegar una Aplicación  Express sobre Node.JS en Heroku</A>
 </H4>
   
 
