--- a/node7.html
+++ b/node7.html
@@ -214,7 +214,7 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <LI><A NAME="tex2html915"
   HREF="node11.html#SECTION04140080000000000000">Ejemplo usando Ajax con jQuery y Express.js</A>
 <LI><A NAME="tex2html916"
-  HREF="node11.html#SECTION04140090000000000000">Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
+  HREF="node11.html#SECTION04140090000000000000">Ejemplo de como Desplegar una Aplicación  Express sobre Node.JS en Heroku</A>
 <LI><A NAME="tex2html917"
   HREF="node11.html#SECTION041400100000000000000">Ajax, jQuery y Sinatra</A>
 <LI><A NAME="tex2html918"
@@ -243,7 +243,7 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <LI><A NAME="tex2html928"
   HREF="node12.html#SECTION04150010000000000000">Ejemplo usando Ajax con jQuery y Express.js</A>
 <LI><A NAME="tex2html929"
-  HREF="node12.html#SECTION04150020000000000000">Ejemplo de como Desplegar auna Aplicación  Express sobre Node.JS en Heroku</A>
+  HREF="node12.html#SECTION04150020000000000000">Ejemplo de como Desplegar una Aplicación  Express sobre Node.JS en Heroku</A>
 <LI><A NAME="tex2html930"
   HREF="node12.html#SECTION04150030000000000000">GitHub Issues</A>
 <LI><A NAME="tex2html931"
