--- a/node12.html
+++ b/node12.html
@@ -341,7 +341,8 @@ A los requisitos de la práctica <I>Comma Separated Values. CSV</I> <A HREF="nod
 anterior:
 
 <UL>
-<LI>Los templates deben hacerse usando underscore y el truco del elemento <code>script</code> en el HTML
+<LI>Los templates deben hacerse usando 
+<FONT COLOR="#ff0000"> underscore</FONT> y el truco del elemento <code>script</code> en el HTML
 </LI>
 <LI>Se debe usar locaStorage para almacenar las últimas entradas
 </LI>
@@ -375,7 +376,7 @@ Le añadimos
 <LI>Use los 
 <FONT COLOR="#ff0000"> Issues de GitHub</FONT> como herramienta colaborativa , indicando
 que bugs han detectado, que funcionalidades hay que añadir, etc.
-Usen <A NAME="4106"></A><SPAN  CLASS="textbf">etiquetas</SPAN> y <A NAME="4108"></A><SPAN  CLASS="textbf">milestones</SPAN> y asigne tareas a los
+Usen <A NAME="4109"></A><SPAN  CLASS="textbf">etiquetas</SPAN> y <A NAME="4111"></A><SPAN  CLASS="textbf">milestones</SPAN> y asigne tareas a los
 programadores del
 grupo. Aprenda a referenciar commits dentro de un issue, a referenciar colaboradores, etc.
 
