--- a/node18.html
+++ b/node18.html
@@ -328,7 +328,8 @@ Formally, the event path is broken into three phases.
 </LI>
 </UL>
       
-      <img src="http://www.w3.org/TR/DOM-Level-3-Events/images/eventflow.png" alt="Graphical representation of an event dispatched in a DOM tree using the DOM event flow" title="Graphical representation of an event dispatched in a DOM tree using the DOM event flow" />
+      <img src="http://www.w3.org/TR/xml-events2/images/event-flow.png" 
+      alt="Graphical representation of an event dispatched in a DOM tree using the DOM event flow" title="Graphical representation of an event dispatched in a DOM tree using the DOM event flow" />
 
 <P>
 These days,
