--- a/node18.html
+++ b/node18.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1179"
+<A NAME="tex2html1184"
   HREF="node19.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1173"
+<A NAME="tex2html1178"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1167"
+<A NAME="tex2html1172"
   HREF="node17.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1175"
+<A NAME="tex2html1180"
   HREF="node91.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1177"
+<A NAME="tex2html1182"
   HREF="node94.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1180"
+<B> Sig:</B> <A NAME="tex2html1185"
   HREF="node19.html">Práctica: Analizador Léxico para</A>
-<B>Sup:</B> <A NAME="tex2html1174"
+<B>Sup:</B> <A NAME="tex2html1179"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1168"
+<B> Ant:</B> <A NAME="tex2html1173"
   HREF="node17.html">Ejercicios</A>
 <B> Con:</B> 
-<A NAME="tex2html1175"
+<A NAME="tex2html1180"
   HREF="node91.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1177"
+<A NAME="tex2html1182"
   HREF="node94.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,30 +103,40 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1181"
-  HREF="node18.html#SECTION041110010000000000000">Donde</A>
-<LI><A NAME="tex2html1182"
-  HREF="node18.html#SECTION041110020000000000000">index.html</A>
-<LI><A NAME="tex2html1183"
-  HREF="node18.html#SECTION041110030000000000000">Ficheros</A>
-<LI><A NAME="tex2html1184"
-  HREF="node18.html#SECTION041110040000000000000">global.css</A>
-<LI><A NAME="tex2html1185"
-  HREF="node18.html#SECTION041110050000000000000">Ficheros de Prueba</A>
 <LI><A NAME="tex2html1186"
-  HREF="node18.html#SECTION041110060000000000000">ini.js</A>
+  HREF="node18.html#SECTION041110010000000000000">Donde</A>
 <LI><A NAME="tex2html1187"
-  HREF="node18.html#SECTION041110070000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+  HREF="node18.html#SECTION041110020000000000000">index.html</A>
 <LI><A NAME="tex2html1188"
-  HREF="node18.html#SECTION041110080000000000000">Tareas</A>
+  HREF="node18.html#SECTION041110030000000000000">Ficheros</A>
 <LI><A NAME="tex2html1189"
-  HREF="node18.html#SECTION041110090000000000000">Véase</A>
+  HREF="node18.html#SECTION041110040000000000000">Registrando Manejadores de Eventos</A>
+<LI><A NAME="tex2html1190"
+  HREF="node18.html#SECTION041110050000000000000">Fechas</A>
+<LI><A NAME="tex2html1191"
+  HREF="node18.html#SECTION041110060000000000000">Drag adn Drop/Arrastra y Suelta</A>
+<LI><A NAME="tex2html1192"
+  HREF="node18.html#SECTION041110070000000000000">Propagación de Eventos</A>
+<LI><A NAME="tex2html1193"
+  HREF="node18.html#SECTION041110080000000000000">Ficheros</A>
+<LI><A NAME="tex2html1194"
+  HREF="node18.html#SECTION041110090000000000000">global.css</A>
+<LI><A NAME="tex2html1195"
+  HREF="node18.html#SECTION0411100100000000000000">Ficheros de Prueba</A>
+<LI><A NAME="tex2html1196"
+  HREF="node18.html#SECTION0411100110000000000000">ini.js</A>
+<LI><A NAME="tex2html1197"
+  HREF="node18.html#SECTION0411100120000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+<LI><A NAME="tex2html1198"
+  HREF="node18.html#SECTION0411100130000000000000">Tareas</A>
+<LI><A NAME="tex2html1199"
+  HREF="node18.html#SECTION0411100140000000000000">Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION041110000000000000000"></A>
-   <A NAME="4164"></A>
+   <A NAME="4182"></A>
 <BR>
 Práctica: Ficheros INI
 </H1>
@@ -250,6 +260,17 @@ Source code in
   -rw-r--r--  1 casiano  staff  767 15 feb 17:21 filelist.html
 </PRE>
 </LI>
+</UL>
+
+<P>
+</LI>
+</UL>
+<H4><A NAME="SECTION041110040000000000000">
+Registrando Manejadores de Eventos</A>
+</H4>
+  
+
+<UL>
 <LI>The 
   <A NAME="tex2html154"
   HREF="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget.addEventListener">EventTarget.addEventListener()</A>
@@ -263,6 +284,18 @@ method
   itself, a Window, or any other object that supports events (such as
   <code>XMLHttpRequest</code>).
 </LI>
+</UL>
+
+<P>
+
+<H4><A NAME="SECTION041110050000000000000">
+Fechas</A>
+</H4>
+  
+
+<P>
+
+<UL>
 <LI><PRE>
   &gt; date = new Date(Date.UTC(2012, 11, 12, 3, 0, 0));
   Wed Dec 12 2012 03:00:00 GMT+0000 (WET)
@@ -274,7 +307,15 @@ method
   HREF="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/toLocaleDateString">Date.prototype.toLocaleDateString()</A>
 </LI>
 </UL>
-</LI>
+
+<P>
+
+<H4><A NAME="SECTION041110060000000000000">
+Drag adn Drop/Arrastra y Suelta</A>
+</H4>
+  
+
+<UL>
 <LI>Ejemplo de Drag and Drop en 
 
 <UL>
@@ -295,8 +336,18 @@ o bien en:
 [~/src/javascript/fileapi/html5rocks]$ ls -l dragandrop.html 
 -rw-r--r--  1 casiano  staff  1535 15 feb 18:25 dragandrop.html
 </PRE>
+</LI>
+</UL>
+
+<P>
+
+<H4><A NAME="SECTION041110070000000000000">
+Propagación de Eventos</A>
+</H4>
   
+
 <UL>
+<LI><UL>
 <LI><code>stopPropagation</code> stops the event from 
 <A NAME="tex2html159"
   HREF="http://www.w3.org/TR/DOM-Level-3-Events/#event-flow">bubbling up the event chain.</A>
@@ -311,17 +362,28 @@ Suppose you have a table and within that table you have an anchor
 Formally, the event path is broken into three phases. 
       
 <UL>
-<LI>In the <A NAME="4177"></A><SPAN  CLASS="textbf">capture phase</SPAN>, the event starts at the top of the DOM tree, and propagates through
+<LI>In the <A NAME="4211"></A><SPAN  CLASS="textbf">capture phase</SPAN>, the event starts at the top of the DOM tree, and propagates through
       to the parent of the target. 
 </LI>
-<LI>In the <A NAME="4179"></A><SPAN  CLASS="textbf">target phase</SPAN>, the event object arrives
+<LI>In the <A NAME="4213"></A><SPAN  CLASS="textbf">target phase</SPAN>, the event object arrives
       at its target. This is generally where you will write your event-handling
       code. 
 </LI>
-<LI>In the <A NAME="4181"></A><SPAN  CLASS="textbf">bubble phase</SPAN>, the event will move back up through the tree
+<LI>In the <A NAME="4215"></A><SPAN  CLASS="textbf">bubble phase</SPAN>, the event will move back up through the tree
       until it reaches the top. Bubble phase propagation happens in reverse
       order to the capture phase, with an event starting at the parent of
       the target and ending up back at the top of the DOM tree. 
+</LI>
+<LI>These days,
+      there’s a choice to register an event in either the <A NAME="4217"></A><SPAN  CLASS="textbf">capture phase</SPAN>
+      or the <A NAME="4219"></A><SPAN  CLASS="textbf">bubble phase</SPAN>. 
+
+<P>
+
+<FONT COLOR="#ff0000"> If you register an event in the capture phase,
+      the parent element will process the event before the child element.</FONT>
+
+<P>
 </LI>
 <LI><A NAME="tex2html160"
   HREF="http://jsfiddle.net/casiano/7Kp4L/">jsfiddle</A>
@@ -332,18 +394,22 @@ Formally, the event path is broken into three phases.
       alt="Graphical representation of an event dispatched in a DOM tree using the DOM event flow" title="Graphical representation of an event dispatched in a DOM tree using the DOM event flow" />
 
 <P>
-These days,
-      there’s a choice to register an event in either the capture phase
-      or the bubble phase. If you register an event in the capture phase,
-      the parent element will process the event before the child element.
-
-<P>
 </LI>
 <LI><code>preventDefault</code> prevents the default action the browser makes on that event.
   
 </LI>
 </UL>
 </LI>
+</UL>
+
+<P>
+
+<H4><A NAME="SECTION041110080000000000000">
+Ficheros</A>
+</H4>
+  
+
+<UL>
 <LI>After you've obtained a <code>File</code> reference, instantiate a <code>FileReader</code> object
     to read its contents into memory. 
     <PRE>
@@ -433,7 +499,7 @@ Once one of these read methods is called on your <code>FileReader</code> object,
 
 <P>
 
-<H4><A NAME="SECTION041110040000000000000">
+<H4><A NAME="SECTION041110090000000000000">
 global.css</A>
 </H4>
   
@@ -488,7 +554,7 @@ body
 
 <P>
 
-<H4><A NAME="SECTION041110050000000000000">
+<H4><A NAME="SECTION0411100100000000000000">
 Ficheros de Prueba</A>
 </H4>
   
@@ -536,7 +602,7 @@ file = "payroll.dat"
 
 <P>
 
-<H4><A NAME="SECTION041110060000000000000">
+<H4><A NAME="SECTION0411100110000000000000">
 ini.js</A>
 </H4>
   
@@ -629,7 +695,7 @@ para saber mas sobre <code>JSON.stringify</code>.
 
 <P>
 
-<H4><A NAME="SECTION041110070000000000000">
+<H4><A NAME="SECTION0411100120000000000000">
 Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
 </H4>
   
@@ -701,7 +767,7 @@ six =6
 
 <P>
 
-<H4><A NAME="SECTION041110080000000000000">
+<H4><A NAME="SECTION0411100130000000000000">
 Tareas</A>
 </H4>
   
@@ -742,7 +808,7 @@ Es conveniente que consiga estos objetivos:
 
 <P>
 
-<H4><A NAME="SECTION041110090000000000000">
+<H4><A NAME="SECTION0411100140000000000000">
 Véase</A>
 </H4>
   
@@ -770,19 +836,19 @@ Véase</A>
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1179"
+<A NAME="tex2html1184"
   HREF="node19.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1173"
+<A NAME="tex2html1178"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1167"
+<A NAME="tex2html1172"
   HREF="node17.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1175"
+<A NAME="tex2html1180"
   HREF="node91.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1177"
+<A NAME="tex2html1182"
   HREF="node94.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -822,11 +888,11 @@ Véase</A>
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1180"
+<B> Sig:</B> <A NAME="tex2html1185"
   HREF="node19.html">Práctica: Analizador Léxico para</A>
-<B>Sup:</B> <A NAME="tex2html1174"
+<B>Sup:</B> <A NAME="tex2html1179"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1168"
+<B> Ant:</B> <A NAME="tex2html1173"
   HREF="node17.html">Ejercicios</A>
 </DIV>
 <!--End of Navigation Panel-->
